force-app/main/default/objects/Audit_Finding__c/Audit_Finding__c.object-meta.xml
<CustomObject>
    <description>Detail record — child of Audit_Run__c. Records each instance of a user holding a high-risk permission combination, including source (Profile, Permission Set, PSG, Muting PS) and risk level.</description>
    <label>Audit Finding</label>
    <nameField>
        <displayFormat>FIND-{00000}</displayFormat>
        <label>Audit Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>