force-app/main/default/objects/Audit_Finding__c/fields/Audit_Run__c.field-meta.xml
<CustomField>
    <fullName>Audit_Run__c</fullName>
    <label>Audit Run</label>
    <referenceTo>Audit_Run__c</referenceTo>
    <relationshipLabel>Audit Findings</relationshipLabel>
    <relationshipName>Audit_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>