force-app/main/default/objects/Audit_Finding__c/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <label>Permission Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>