force-app/main/default/objects/Audit_Finding__c/fields/Permission_Source__c.field-meta.xml
<CustomField>
    <fullName>Permission_Source__c</fullName>
    <label>Permission Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Profile</fullName><default>false</default><label>Profile</label></value>
            <value><fullName>Permission Set</fullName><default>false</default><label>Permission Set</label></value>
            <value><fullName>Permission Set Group</fullName><default>false</default><label>Permission Set Group</label></value>
            <value><fullName>Muting Permission Set</fullName><default>false</default><label>Muting Permission Set</label></value>
            <value><fullName>Effective Permissions</fullName><default>false</default><label>Effective Permissions (Cross-Source)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>