force-app/main/default/objects/Audit_Finding__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>