force-app/main/default/objects/Audit_Finding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>Exception Approved</fullName><default>false</default><label>Exception Approved</label></value>
            <value><fullName>Remediated</fullName><default>false</default><label>Remediated</label></value>
            <value><fullName>False Positive</fullName><default>false</default><label>False Positive</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>