force-app/main/default/objects/Audit_Finding__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Audit_Findings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>